# stateless-block-verifier

./: .gitmodules  CHANGELOG.md  Cargo.toml  README.md  clippy.toml  grafana.json  rust-toolchain.toml  rustfmt.toml  taplo.toml
.github/workflows/: ci.yml  trace-update.yml
crates/chainspec/: Cargo.toml
crates/chainspec/data/genesis/: genesis.mainnet.json
crates/chainspec/src/: lib.rs  scroll.rs
crates/core/: Cargo.toml
crates/core/src/: chunk.rs  database.rs  error.rs  executor.rs  genesis.rs  hardfork.rs  lib.rs  verifier.rs  witness.rs
crates/core/src/data/genesis/: genesis.sepolia.json
crates/core/src/ethereum/: evm_config.rs  mod.rs  node_primitives.rs
crates/core/src/executor/: builder.rs  ethereum.rs  hooks.rs  mod.rs  scroll.rs
crates/core/src/executor/factory/: ethereum.rs  mod.rs  scroll.rs
crates/core/src/hardfork/: mod.rs  scroll.rs
crates/core/src/verifier/: ethereum.rs  inner.rs  mod.rs  scroll.rs
crates/helpers/: Cargo.toml
crates/helpers/src/: lib.rs  macros.rs
crates/helpers/src/metrics/: mod.rs  registry.rs
crates/helpers/src/utils/: debug.rs  mod.rs
crates/kv/: Cargo.toml
crates/kv/src/: lib.rs
crates/kv/src/imps/: alloy_primitives.rs  alloy_trie.rs  mod.rs  nohash.rs  null.rs  revm_primitives.rs  sled.rs  small.rs  std_collections.rs
crates/precompile/: Cargo.toml
crates/precompile/src/: bn128.rs  ethereum.rs  kzg_point_evaluation.rs  lib.rs  scroll.rs  secp256k1.rs
crates/precompile/src/imps/: mod.rs  sha256.rs
crates/precompile/src/imps/bn128/: mod.rs  openvm.rs
crates/precompile/src/imps/kzg_point_evaluation/: mod.rs  openvm.rs
crates/precompile/src/imps/secp256k1/: mod.rs  openvm.rs
crates/precompile/src/openvm/: mod.rs  sha256.rs
crates/precompile/src/openvm/bn128/: mod.rs
crates/primitives/: Cargo.toml
crates/primitives/src/: auth_list.rs  block_header.rs  chainspec.rs  consensus.rs  ext.rs  hardforks.rs  legacy_types.rs  lib.rs  predeployed.rs  reth.rs  rpc.rs  transaction.rs  types.rs  witness.rs
crates/primitives/src/chainspec/: ethereum_chain.rs  mod.rs  scroll_chain.rs
crates/primitives/src/data/: v1_l1_oracle_bytecode.txt  v2_l1_oracle_bytecode.txt
crates/primitives/src/ext/: imps.rs  mod.rs  reth.rs
crates/primitives/src/ext/scroll/: mod.rs  reth.rs
crates/primitives/src/imp/: archived_block_trace_v2.rs  blanket.rs  block_trace.rs  block_trace_v2.rs  mod.rs
crates/primitives/src/legacy_types/: access_list.rs  auth_list.rs  block_header.rs  signature.rs  transaction.rs  withdrawal.rs  witness.rs
crates/primitives/src/reth/: mod.rs  primitives.rs
crates/primitives/src/scroll/: chunk.rs  chunk_builder.rs  mod.rs
crates/primitives/src/types/: access_list.rs  auth_list.rs  block_header.rs  consensus.rs  eips.rs  mod.rs  reth.rs  rpc.rs  scroll.rs  signature.rs  transaction.rs  tx.rs  withdrawal.rs  witness.rs
crates/primitives/src/types/reth/: evm.rs  primitives.rs
crates/primitives/src/types/scroll/: chunk.rs  chunk_builder.rs  mod.rs
crates/sbv/: Cargo.toml
crates/sbv/src/: lib.rs
crates/stateful/: Cargo.toml  README.md
crates/stateful/src/: error.rs  lib.rs  main.rs  pipeline.rs  sanity_check.rs  utils.rs
crates/t8n/evm/: Cargo.toml
crates/t8n/evm/src/: main.rs
crates/t8n/t8n/: Cargo.toml
crates/t8n/t8n/src/: block.rs  chain_spec.rs  lib.rs  output.rs  state.rs
crates/trie/: Cargo.toml
crates/trie/src/: execution_witness.rs  lib.rs  mpt.rs  r0.rs
crates/utils/: Cargo.toml  README.md
crates/utils-cli/: Cargo.toml
crates/utils-cli/src/: main.rs
crates/utils-cli/src/commands/witness/: dump.rs  rkyv_convert.rs
crates/utils-cli/src/helpers/: mod.rs  tower.rs
crates/utils/src/: lib.rs  macros.rs  main.rs  rpc.rs  verifier.rs  witness.rs
crates/utils/src/commands/: mod.rs
crates/utils/src/commands/witness/: create.rs  dump.rs  mod.rs  rkyv_convert.rs
crates/utils/src/helpers/: tower.rs
crates/utils/src/metrics/: registry.rs
crates/utils/src/rpc/: layers.rs  mod.rs
crates/utils/src/utils/: debug.rs  mod.rs
scripts/: download.sh  download_trace.sh
src/: chunk.rs  database.rs  error.rs  executor.rs  hardfork.rs  lib.rs  macros.rs  marcos.rs  utils.rs
src/executor/: builder.rs  error.rs  hooks.rs  mod.rs
src/metrics/: mod.rs  registry.rs
src/utils/: ext.rs  mod.rs
src/utils/ext/: mod.rs
testdata/: .gitignore
testdata/ethereum/: 1-23587691.json
testdata/holesky_witness/: 0x2ba60d.json  0x2caa27.json  2971844.json  2971845.json  2971846.json  2971847.json
testdata/holesky_witness/0x2ba60c/: block.json  witness.json
testdata/holesky_witness/0x2ba60d/: block.json  witness.json
testdata/holesky_witness/0x2d411c/: block.json  witness.json
testdata/holesky_witness/0x2d411d/: block.json
testdata/holesky_witness/0x2d411e/: block.json  witness.json
testdata/holesky_witness/0x2d411f/: block.json  witness.json
testdata/holesky_witness/0x2d4120/: block.json  witness.json
testdata/legacy/holesky_witness/: 2971844.json
testdata/mainnet_blocks/: 0x84e088.json  0x979fc0.json  0xb09427.json  0xb36faf.json  0xb64c5f.json  0xb921bb.json  5224657.json  5224657u.json
testdata/scroll/euclidv2/: 14919993.json  14919994.json  14919996.json  14919999.json  14920001.json  14920002.json  14920003.json  14920004.json  14920007.json  14920010.json
testdata/scroll/feynman/: 5343513301-1.json  5343513301-2.json  5343513301-3.json  5343513301-4.json  534352-19604675.json  534352-19604678.json  534352-19604682.json  534352-19604686.json  534352-19604689.json
testdata/scroll_witness/: 12508460.json  12508461.json  12508462.json  12508463.json  enforce-revert.json
testdata/scroll_witness/euclid_v2/: 1.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json
testdata/scroll_witness/euclidv1/: 12508460.json  12508462.json  12508463.json
testdata/scroll_witness/euclidv2/: 1.json  14919991.json  14919992.json  14919995.json  14919997.json  14919998.json  14920000.json  14920005.json  14920006.json  14920008.json  14920009.json  6.json  7.json
testdata/scroll_witness/feynman/: 16525000.json  16525001.json  16525002.json  (+32 more)
(+56 files in other folders)
