[workspace]
members = [
    "crates/bin",
    "crates/core",
    "crates/helpers",
    "crates/kv",
    "crates/precompile",
    "crates/primitives",
    "crates/sbv",
    "crates/trie",
    "crates/utils",
]
resolver = "2"

[workspace.package]
version = "2.0.0"
edition = "2021"
rust-version = "1.81"
authors = ["Scroll developers"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/scroll-tech/stateless-block-verifier"
repository = "https://github.com/scroll-tech/stateless-block-verifier"

[workspace.dependencies]
# https://github.com/alloy-rs/alloy
alloy = { version = "1.0", default-features = false }
alloy-consensus = { version = "1.0", default-features = false }
alloy-eips = { version = "1.0", default-features = false }
alloy-network = { version = "1.0", default-features = false }
alloy-provider = { version = "1.0", default-features = false }
alloy-rpc-types-eth = { version = "1.0", default-features = false }
alloy-serde = { version = "1.0", default-features = false }
alloy-transport = { version = "1.0", default-features = false }
# https://github.com/alloy-rs/rlp
alloy-rlp = { version = "0.3", default-features = false }
# https://github.com/alloy-rs/trie
alloy-trie = { version = "0.8", default-features = false }
# https://github.com/alloy-rs/core
alloy-primitives = { version = "1.1", default-features = false, features = ["map-hashbrown", "map-fxhash"] }
# https://github.com/alloy-rs/evm
alloy-evm = { version = "0.10", default-features = false }

revm-scroll = { git = "https://github.com/scroll-tech/scroll-revm", rev = "6ccb897197d7ed319463df487f428fce0a77b47f", default-features = false }

reth-chainspec = { git = "https://github.com/scroll-tech/reth", branch = "scroll", default-features = false }
reth-evm = { git = "https://github.com/scroll-tech/reth", branch = "scroll", default-features = false }
reth-evm-ethereum = { git = "https://github.com/scroll-tech/reth", branch = "scroll", default-features = false }
reth-ethereum-forks = { git = "https://github.com/scroll-tech/reth", branch = "scroll", default-features = false }
reth-execution-types = { git = "https://github.com/scroll-tech/reth", branch = "scroll", default-features = false }
reth-primitives = { git = "https://github.com/scroll-tech/reth", branch = "scroll", default-features = false }
reth-primitives-traits = { git = "https://github.com/scroll-tech/reth", branch = "scroll", default-features = false }
reth-trie = { git = "https://github.com/scroll-tech/reth", branch = "scroll", default-features = false }
reth-trie-sparse = { git = "https://github.com/scroll-tech/reth", branch = "scroll", default-features = false }

reth-scroll-chainspec = { git = "https://github.com/scroll-tech/reth", branch = "scroll", default-features = false }
reth-scroll-evm = { git = "https://github.com/scroll-tech/reth", branch = "scroll", default-features = false }
reth-scroll-forks = { git = "https://github.com/scroll-tech/reth", branch = "scroll", default-features = false }
reth-scroll-primitives = { git = "https://github.com/scroll-tech/reth", branch = "scroll", default-features = false }

scroll-alloy-evm = { git = "https://github.com/scroll-tech/reth", branch = "scroll", default-features = false }
scroll-alloy-consensus = { git = "https://github.com/scroll-tech/reth", branch = "scroll", default-features = false }
scroll-alloy-rpc-types = { git = "https://github.com/scroll-tech/reth", branch = "scroll", default-features = false }
scroll-alloy-network = { git = "https://github.com/scroll-tech/reth", branch = "scroll", default-features = false }

openvm-ecc-guest = { git = "https://github.com/openvm-org/openvm.git", rev = "3c800070d363237832a66dbe5501d3c365f3c549" }
openvm-keccak256 = { git = "https://github.com/openvm-org/openvm.git", rev = "3c800070d363237832a66dbe5501d3c365f3c549" }
openvm-sha2 = { git = "https://github.com/openvm-org/openvm.git", rev = "3c800070d363237832a66dbe5501d3c365f3c549" }
openvm-pairing = { git = "https://github.com/openvm-org/openvm.git", rev = "3c800070d363237832a66dbe5501d3c365f3c549" }
openvm-k256 = { package = "k256", git = "https://github.com/openvm-org/openvm.git", rev = "3c800070d363237832a66dbe5501d3c365f3c549" }
openvm-p256 = { package = "p256", git = "https://github.com/openvm-org/openvm.git", rev = "3c800070d363237832a66dbe5501d3c365f3c549" }
openvm-kzg = { git = "https://github.com/axiom-crypto/openvm-kzg.git", rev = "56751b25b4f18ba9988355faa288918db0ab3fde", default-features = false }

async-trait = "0.1"
auto_impl = "1.2"
console = "0.15"
futures = "0.3"
hashbrown = { version = "0.15", default-features = false }
indicatif = "0.17"
itertools = "0.14"
once_cell = "1.19"
rkyv = "0.8"
rustc-hash = "2.1"
thiserror = "1.0"
tiny-keccak = "2.0"
tower = "0.5"
url = ">=2.5.3"

# binary dependencies
anyhow = "1.0"
clap = "4"
serde = "1.0"
serde_json = "1.0"
serde_path_to_error = "0.1"
tokio = { version = "1", default-features = false }

# optional dependencies
csv = "1.3"
ctor = "0.2"
hyper = { version = "1.4", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
prometheus-client = "0.22"
pprof = { version = "0.13", features = ["flamegraph"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# dev dependencies
rand = "0.8"
reqwest = "0.12"

# workspace
sbv = { path = "crates/sbv" }
sbv-core = { path = "crates/core" }
sbv-kv = { path = "crates/kv" }
sbv-primitives = { path = "crates/primitives" }
sbv-precompile = { path = "crates/precompile" }
sbv-trie = { path = "crates/trie" }
sbv-helpers = { path = "crates/helpers" }
sbv-utils = { path = "crates/utils" }

[workspace.dependencies.revm]
git = "https://github.com/scroll-tech/revm"
branch = "feat/reth-v74"
default-features = false
features = ["std"]

[workspace.lints.rust]
missing-docs = "deny"
missing-debug-implementations = "deny"

[patch.crates-io]
revm = { git = "https://github.com/scroll-tech/revm", branch = "feat/reth-v74" }
revm-bytecode = { git = "https://github.com/scroll-tech/revm", branch = "feat/reth-v74" }
revm-context = { git = "https://github.com/scroll-tech/revm", branch = "feat/reth-v74" }
revm-context-interface = { git = "https://github.com/scroll-tech/revm", branch = "feat/reth-v74" }
revm-database = { git = "https://github.com/scroll-tech/revm", branch = "feat/reth-v74" }
revm-database-interface = { git = "https://github.com/scroll-tech/revm", branch = "feat/reth-v74" }
revm-handler = { git = "https://github.com/scroll-tech/revm", branch = "feat/reth-v74" }
revm-inspector = { git = "https://github.com/scroll-tech/revm", branch = "feat/reth-v74" }
revm-interpreter = { git = "https://github.com/scroll-tech/revm", branch = "feat/reth-v74" }
revm-precompile = { git = "https://github.com/scroll-tech/revm", branch = "feat/reth-v74" }
revm-primitives = { git = "https://github.com/scroll-tech/revm", branch = "feat/reth-v74" }
revm-state = { git = "https://github.com/scroll-tech/revm", branch = "feat/reth-v74" }

# patched add rkyv support
ruint = { git = "https://github.com/scroll-tech/uint.git", branch = "v1.15.0" }
alloy-primitives = { git = "https://github.com/scroll-tech/alloy-core", branch = "v1.2.0" }

## for local development
#reth-chainspec = { path = "../reth/crates/chainspec" }
#reth-evm = { path = "../reth/crates/evm/evm" }
#reth-evm-ethereum = { path = "../reth/crates/ethereum/evm" }
#reth-ethereum-forks = { path = "../reth/crates/ethereum/hardforks" }
#reth-execution-types = { path = "../reth/crates/evm/execution-types" }
#reth-primitives = { path = "../reth/crates/primitives" }
#reth-primitives-traits = { path = "../reth/crates/primitives-traits" }
#reth-storage-errors = { path = "../reth/crates/storage/errors" }
#reth-trie = { path = "../reth/crates/trie/trie" }
#reth-trie-sparse = { path = "../reth/crates/trie/sparse" }
#
#revm = { path = "../revm/crates/revm" }
#revm-bytecode = { path = "../revm/crates/bytecode" }
#revm-context = { path = "../revm/crates/context" }
#revm-context-interface = { path = "../revm/crates/context/interface" }
#revm-database = { path = "../revm/crates/database" }
#revm-database-interface = { path = "../revm/crates/database/interface" }
#revm-handler = { path = "../revm/crates/handler" }
#revm-inspector = { path = "../revm/crates/inspector" }
#revm-interpreter = { path = "../revm/crates/interpreter" }
#revm-precompile = { path = "../revm/crates/precompile" }
#revm-primitives = { path = "../revm/crates/primitives" }
#revm-state = { path = "../revm/crates/state" }
#
#[patch."https://github.com/scroll-tech/revm"]
#revm = { path = "../revm/crates/revm" }
#revm-bytecode = { path = "../revm/crates/bytecode" }
#revm-context = { path = "../revm/crates/context" }
#revm-context-interface = { path = "../revm/crates/context/interface" }
#revm-database = { path = "../revm/crates/database" }
#revm-database-interface = { path = "../revm/crates/database/interface" }
#revm-handler = { path = "../revm/crates/handler" }
#revm-inspector = { path = "../revm/crates/inspector" }
#revm-interpreter = { path = "../revm/crates/interpreter" }
#revm-precompile = { path = "../revm/crates/precompile" }
#revm-primitives = { path = "../revm/crates/primitives" }
#revm-state = { path = "../revm/crates/state" }
#
#[patch."https://github.com/scroll-tech/scroll-revm"]
#revm-scroll = { path = "../scroll-revm" }
#
#[patch."https://github.com/scroll-tech/reth"]
#reth-chainspec = { path = "../reth/crates/chainspec" }
#reth-evm = { path = "../reth/crates/evm/evm" }
#reth-evm-ethereum = { path = "../reth/crates/ethereum/evm" }
#reth-ethereum-forks = { path = "../reth/crates/ethereum/hardforks" }
#reth-execution-types = { path = "../reth/crates/evm/execution-types" }
#reth-primitives = { path = "../reth/crates/primitives" }
#reth-primitives-traits = { path = "../reth/crates/primitives-traits" }
#reth-storage-errors = { path = "../reth/crates/storage/errors" }
#reth-trie = { path = "../reth/crates/trie/trie" }
#reth-trie-sparse = { path = "../reth/crates/trie/sparse" }
#
#reth-scroll-chainspec = { path = "../reth/crates/scroll/chainspec" }
#reth-scroll-evm = { path = "../reth/crates/scroll/evm" }
#reth-scroll-forks = { path = "../reth/crates/scroll/hardforks" }
#reth-scroll-primitives = { path = "../reth/crates/scroll/primitives" }
#
#scroll-alloy-evm = { path = "../reth/crates/scroll/alloy/evm" }
#scroll-alloy-consensus = { path = "../reth/crates/scroll/alloy/consensus" }
#scroll-alloy-rpc-types = { path = "../reth/crates/scroll/alloy/rpc-types" }
#scroll-alloy-network = { path = "../reth/crates/scroll/alloy/network" }


[profile.release]
lto = true
codegen-units = 1
