[workspace]
members = [
    "crates/bin",
    "crates/core",
    "crates/helpers",
    "crates/kv",
    "crates/precompile",
    "crates/primitives",
    "crates/sbv",
    "crates/trie",
    "crates/utils",
]
resolver = "2"

[workspace.package]
version = "2.0.0"
edition = "2021"
rust-version = "1.81"
authors = ["Scroll developers"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/scroll-tech/stateless-block-verifier"
repository = "https://github.com/scroll-tech/stateless-block-verifier"

[workspace.dependencies]
# https://github.com/alloy-rs/alloy
alloy = { version = "1.0", default-features = false }
alloy-consensus = { version = "1.0", default-features = false }
alloy-eips = { version = "1.0", default-features = false }
alloy-network = { version = "1.0", default-features = false }
alloy-provider = { version = "1.0", default-features = false }
alloy-rpc-client = { version = "1.0", default-features = false }
alloy-rpc-types-eth = { version = "1.0", default-features = false }
alloy-rpc-types-debug = { version = "1.0", default-features = false }
alloy-serde = { version = "1.0", default-features = false }
alloy-transport = { version = "1.0", default-features = false }
# https://github.com/alloy-rs/rlp
alloy-rlp = { version = "0.3", default-features = false }
# https://github.com/alloy-rs/trie
alloy-trie = { version = "0.9", default-features = false }
# https://github.com/alloy-rs/core
alloy-primitives = { version = "1.3", default-features = false, features = ["map-hashbrown", "map-fxhash"] }
# https://github.com/alloy-rs/evm
alloy-evm = { version = "0.17", default-features = false }

revm-scroll = { git = "https://github.com/scroll-tech/scroll-revm", default-features = false }

#reth-chainspec = { git = "https://github.com/scroll-tech/reth", rev = "a6f827a71c5523d1d32e579456dfdab2cb003c66", default-features = false }
#reth-evm = { git = "https://github.com/scroll-tech/reth", rev = "a6f827a71c5523d1d32e579456dfdab2cb003c66", default-features = false }
#reth-evm-ethereum = { git = "https://github.com/scroll-tech/reth", rev = "a6f827a71c5523d1d32e579456dfdab2cb003c66", default-features = false }
#reth-ethereum-forks = { git = "https://github.com/scroll-tech/reth", rev = "a6f827a71c5523d1d32e579456dfdab2cb003c66", default-features = false }
#reth-execution-types = { git = "https://github.com/scroll-tech/reth", rev = "a6f827a71c5523d1d32e579456dfdab2cb003c66", default-features = false }
#reth-primitives = { git = "https://github.com/scroll-tech/reth", rev = "a6f827a71c5523d1d32e579456dfdab2cb003c66", default-features = false }
#reth-primitives-traits = { git = "https://github.com/scroll-tech/reth", rev = "a6f827a71c5523d1d32e579456dfdab2cb003c66", default-features = false }
#reth-trie = { git = "https://github.com/scroll-tech/reth", rev = "a6f827a71c5523d1d32e579456dfdab2cb003c66", default-features = false }
#reth-trie-sparse = { git = "https://github.com/scroll-tech/reth", rev = "a6f827a71c5523d1d32e579456dfdab2cb003c66", default-features = false }

#reth-scroll-chainspec = { git = "https://github.com/scroll-tech/reth", rev = "a6f827a71c5523d1d32e579456dfdab2cb003c66", default-features = false }
#reth-scroll-evm = { git = "https://github.com/scroll-tech/reth", rev = "a6f827a71c5523d1d32e579456dfdab2cb003c66", default-features = false }
#reth-scroll-forks = { git = "https://github.com/scroll-tech/reth", rev = "a6f827a71c5523d1d32e579456dfdab2cb003c66", default-features = false }
#reth-scroll-primitives = { git = "https://github.com/scroll-tech/reth", rev = "a6f827a71c5523d1d32e579456dfdab2cb003c66", default-features = false }
#
#scroll-alloy-evm = { git = "https://github.com/scroll-tech/reth", rev = "a6f827a71c5523d1d32e579456dfdab2cb003c66", default-features = false }
#scroll-alloy-consensus = { git = "https://github.com/scroll-tech/reth", rev = "a6f827a71c5523d1d32e579456dfdab2cb003c66", default-features = false }
#scroll-alloy-rpc-types = { git = "https://github.com/scroll-tech/reth", rev = "a6f827a71c5523d1d32e579456dfdab2cb003c66", default-features = false }
#scroll-alloy-network = { git = "https://github.com/scroll-tech/reth", rev = "a6f827a71c5523d1d32e579456dfdab2cb003c66", default-features = false }

reth-chainspec = { path = "../reth/crates/chainspec", default-features = false }
reth-evm = { path = "../reth/crates/evm/evm", default-features = false }
reth-evm-ethereum = { path = "../reth/crates/ethereum/evm", default-features = false }
reth-ethereum-forks = { path = "../reth/crates/ethereum/hardforks", default-features = false }
reth-execution-types = { path = "../reth/crates/evm/execution-types", default-features = false }
reth-primitives = { path = "../reth/crates/primitives", default-features = false }
reth-primitives-traits = { path = "../reth/crates/primitives-traits", default-features = false }
reth-trie = { path = "../reth/crates/trie/trie", default-features = false }
reth-trie-sparse = { path = "../reth/crates/trie/sparse", default-features = false }

reth-scroll-chainspec = { path = "../reth/crates/scroll/chainspec", default-features = false }
reth-scroll-evm = { path = "../reth/crates/scroll/evm", default-features = false }
reth-scroll-forks = { path = "../reth/crates/scroll/hardforks", default-features = false }
reth-scroll-primitives = { path = "../reth/crates/scroll/primitives", default-features = false }

scroll-alloy-evm = { path = "../reth/crates/scroll/alloy/evm", default-features = false }
scroll-alloy-consensus = { path = "../reth/crates/scroll/alloy/consensus", default-features = false }
scroll-alloy-rpc-types = { path = "../reth/crates/scroll/alloy/rpc-types", default-features = false }
scroll-alloy-network = { path = "../reth/crates/scroll/alloy/network", default-features = false }

openvm-ecc-guest = { git = "https://github.com/openvm-org/openvm.git", rev = "51d0aa69694fd33def3c433e48228a5675e4fd97" }
openvm-keccak256 = { git = "https://github.com/openvm-org/openvm.git", rev = "51d0aa69694fd33def3c433e48228a5675e4fd97" }
openvm-sha2 = { git = "https://github.com/openvm-org/openvm.git", rev = "51d0aa69694fd33def3c433e48228a5675e4fd97" }
openvm-pairing = { git = "https://github.com/openvm-org/openvm.git", rev = "51d0aa69694fd33def3c433e48228a5675e4fd97" }
openvm-k256 = { package = "k256", git = "https://github.com/openvm-org/openvm.git", rev = "51d0aa69694fd33def3c433e48228a5675e4fd97" }
openvm-p256 = { package = "p256", git = "https://github.com/openvm-org/openvm.git", rev = "51d0aa69694fd33def3c433e48228a5675e4fd97" }
openvm-kzg = { git = "https://github.com/axiom-crypto/openvm-kzg.git", rev = "3a2d6bf31086cfc87b6573e9c2e96f0a2d47ff2e", default-features = false }

async-trait = "0.1"
auto_impl = "1.2"
console = "0.16"
futures = "0.3"
hashbrown = { version = "0.15", default-features = false }
indicatif = "0.18"
itertools = "0.14"
rkyv = "0.8"
rustc-hash = "2.1"
thiserror = "2.0"
tiny-keccak = "2.0"
url = ">=2.5.3"
rstest = "0.26"
cfg-if = "1.0"
eyre = "0.6"
clap = "4"
serde = "1.0"
serde_json = "1.0"
serde_path_to_error = "0.1"
serde_with = "3.14"
tokio = { version = "1", default-features = false }
csv = "1.3"
ctor = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# workspace
sbv = { path = "crates/sbv" }
sbv-core = { path = "crates/core" }
sbv-kv = { path = "crates/kv" }
sbv-primitives = { path = "crates/primitives" }
sbv-precompile = { path = "crates/precompile" }
sbv-trie = { path = "crates/trie" }
sbv-helpers = { path = "crates/helpers" }
sbv-utils = { path = "crates/utils" }

[workspace.dependencies.revm]
git = "https://github.com/scroll-tech/revm"
default-features = false
features = ["std"]

[workspace.lints.rust]
missing-docs = "deny"
missing-debug-implementations = "deny"

[patch.crates-io]
revm = { git = "https://github.com/scroll-tech/revm" }
revm-bytecode = { git = "https://github.com/scroll-tech/revm" }
revm-context = { git = "https://github.com/scroll-tech/revm" }
revm-context-interface = { git = "https://github.com/scroll-tech/revm" }
revm-database = { git = "https://github.com/scroll-tech/revm" }
revm-database-interface = { git = "https://github.com/scroll-tech/revm" }
revm-handler = { git = "https://github.com/scroll-tech/revm" }
revm-inspector = { git = "https://github.com/scroll-tech/revm" }
revm-interpreter = { git = "https://github.com/scroll-tech/revm" }
revm-precompile = { git = "https://github.com/scroll-tech/revm" }
revm-primitives = { git = "https://github.com/scroll-tech/revm" }
revm-state = { git = "https://github.com/scroll-tech/revm" }

# patched add rkyv support
alloy-primitives = { git = "https://github.com/scroll-tech/alloy-core", branch = "feat/rkyv" }

## for local development
#reth-chainspec = { path = "../reth/crates/chainspec" }
#reth-evm = { path = "../reth/crates/evm/evm" }
#reth-evm-ethereum = { path = "../reth/crates/ethereum/evm" }
#reth-ethereum-forks = { path = "../reth/crates/ethereum/hardforks" }
#reth-execution-types = { path = "../reth/crates/evm/execution-types" }
#reth-primitives = { path = "../reth/crates/primitives" }
#reth-primitives-traits = { path = "../reth/crates/primitives-traits" }
#reth-storage-errors = { path = "../reth/crates/storage/errors" }
#reth-trie = { path = "../reth/crates/trie/trie" }
#reth-trie-sparse = { path = "../reth/crates/trie/sparse" }
#
#revm = { path = "../revm/crates/revm" }
#revm-bytecode = { path = "../revm/crates/bytecode" }
#revm-context = { path = "../revm/crates/context" }
#revm-context-interface = { path = "../revm/crates/context/interface" }
#revm-database = { path = "../revm/crates/database" }
#revm-database-interface = { path = "../revm/crates/database/interface" }
#revm-handler = { path = "../revm/crates/handler" }
#revm-inspector = { path = "../revm/crates/inspector" }
#revm-interpreter = { path = "../revm/crates/interpreter" }
#revm-precompile = { path = "../revm/crates/precompile" }
#revm-primitives = { path = "../revm/crates/primitives" }
#revm-state = { path = "../revm/crates/state" }
#
#[patch."https://github.com/scroll-tech/revm"]
#revm = { path = "../revm/crates/revm" }
#revm-bytecode = { path = "../revm/crates/bytecode" }
#revm-context = { path = "../revm/crates/context" }
#revm-context-interface = { path = "../revm/crates/context/interface" }
#revm-database = { path = "../revm/crates/database" }
#revm-database-interface = { path = "../revm/crates/database/interface" }
#revm-handler = { path = "../revm/crates/handler" }
#revm-inspector = { path = "../revm/crates/inspector" }
#revm-interpreter = { path = "../revm/crates/interpreter" }
#revm-precompile = { path = "../revm/crates/precompile" }
#revm-primitives = { path = "../revm/crates/primitives" }
#revm-state = { path = "../revm/crates/state" }
#
#[patch."https://github.com/scroll-tech/scroll-revm"]
#revm-scroll = { path = "../scroll-revm" }
#
#[patch."https://github.com/scroll-tech/reth"]
#reth-chainspec = { path = "../reth/crates/chainspec" }
#reth-evm = { path = "../reth/crates/evm/evm" }
#reth-evm-ethereum = { path = "../reth/crates/ethereum/evm" }
#reth-ethereum-forks = { path = "../reth/crates/ethereum/hardforks" }
#reth-execution-types = { path = "../reth/crates/evm/execution-types" }
#reth-primitives = { path = "../reth/crates/primitives" }
#reth-primitives-traits = { path = "../reth/crates/primitives-traits" }
#reth-storage-errors = { path = "../reth/crates/storage/errors" }
#reth-trie = { path = "../reth/crates/trie/trie" }
#reth-trie-sparse = { path = "../reth/crates/trie/sparse" }
#
#reth-scroll-chainspec = { path = "../reth/crates/scroll/chainspec" }
#reth-scroll-evm = { path = "../reth/crates/scroll/evm" }
#reth-scroll-forks = { path = "../reth/crates/scroll/hardforks" }
#reth-scroll-primitives = { path = "../reth/crates/scroll/primitives" }
#
#scroll-alloy-evm = { path = "../reth/crates/scroll/alloy/evm" }
#scroll-alloy-consensus = { path = "../reth/crates/scroll/alloy/consensus" }
#scroll-alloy-rpc-types = { path = "../reth/crates/scroll/alloy/rpc-types" }
#scroll-alloy-network = { path = "../reth/crates/scroll/alloy/network" }


[profile.release]
lto = true
codegen-units = 1
