[package]
name = "sbv-chainspec"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
alloy-chains.workspace = true
revm.workspace = true
reth-chainspec.workspace = true
reth-ethereum-forks.workspace = true
serde_json.workspace = true

sbv-primitives.workspace = true

[features]
scroll = []


