[package]
name = "sbv-core"
homepage = "https://github.com/scroll-tech/stateless-block-verifier/tree/master/crates/core"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
tracing = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
rkyv = { workspace = true, optional = true }
cfg-if.workspace = true
itertools.workspace = true

sbv-primitives = { workspace = true, features = [
  "chainspec",
  "revm-types",
  "reth-evm-types",
  "reth-execution-types",
] }
sbv-precompile.workspace = true
sbv-helpers.workspace = true
sbv-kv.workspace = true
sbv-trie.workspace = true

[dev-dependencies]
ctor.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rstest.workspace = true
serde_json.workspace = true
sbv-primitives = { workspace = true, features = ["serde"] }

[features]
rkyv = ["dep:rkyv", "sbv-primitives/rkyv"]
serde = ["dep:serde", "sbv-primitives/serde"]

scroll = [
  "sbv-primitives/scroll-chainspec",
  "sbv-primitives/scroll-reth-evm-types",
  "sbv-precompile/scroll",
]
dev = ["dep:tracing", "sbv-primitives/dev", "sbv-trie/dev"]

# sp1 related
sp1 = ["sbv-trie/sp1"]
cycle-tracker = ["sbv-trie/cycle-tracker"]

scroll-openvm = ["sbv-precompile/scroll-openvm"]
ethereum-openvm = ["sbv-precompile/ethereum-openvm"]
