[package]
name = "sbv-core"
homepage = "https://github.com/scroll-tech/stateless-block-verifier/tree/master/crates/core"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
auto_impl.workspace = true
tracing = { workspace = true, optional = true }
serde.workspace = true
rkyv = { workspace = true, optional = true }
itertools.workspace = true
serde_with.workspace = true
reth-primitives-traits = { workspace = true, features = ["serde", "serde-bincode-compat"] }
reth-stateless.workspace = true

sbv-primitives = { workspace = true, features = [
  "chainspec",
  "revm-types",
  "reth-evm-types",
  "reth-execution-types",
] }
sbv-helpers.workspace = true
sbv-trie.workspace = true

[dev-dependencies]
ctor.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rstest.workspace = true
serde_json.workspace = true
sbv-primitives.workspace = true

[features]
rkyv = ["dep:rkyv", "sbv-primitives/rkyv"]

scroll = [
  "sbv-primitives/scroll-chainspec",
  "sbv-primitives/scroll-reth-evm-types",
]
scroll-compress-info = ["sbv-primitives/scroll-compress-info"]
dev = ["dep:tracing", "sbv-primitives/dev", "sbv-trie/dev"]

# sp1 related
sp1 = ["sbv-trie/sp1"]
cycle-tracker = ["sbv-trie/cycle-tracker"]
