[package]
name = "sbv-helpers"
homepage = "https://github.com/scroll-tech/stateless-block-verifier/tree/master/crates/utils"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
hyper = { workspace = true, optional = true }
hyper-util = { workspace = true, optional = true }
http-body-util = { workspace = true, optional = true }
once_cell = { workspace = true, optional = true }
prometheus-client = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tracing.workspace = true

[dev-dependencies]
rand.workspace = true
reqwest.workspace = true

[features]
dev = []
metrics = [
  "dep:hyper",
  "dep:hyper-util",
  "dep:http-body-util",
  "dep:once_cell",
  "dep:prometheus-client",
  "dep:tokio",
  "tokio/macros",
  "tokio/signal",
]
