[package]
name = "sbv-helpers"
homepage = "https://github.com/scroll-tech/stateless-block-verifier/tree/master/crates/utils"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
tracing.workspace = true

[dev-dependencies]
rand.workspace = true
reqwest.workspace = true

[features]
dev = []
