[package]
homepage = "https://github.com/scroll-tech/stateless-block-verifier/tree/master/crates/utils"
name = "sbv-helpers"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
tracing.workspace = true

[dev-dependencies]
rand.workspace = true
reqwest.workspace = true

[features]
dev = []
