[package]
name = "sbv-kv"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
auto_impl.workspace = true
hashbrown = { workspace = true, features = [
  "rayon",
] } # reth use rayon::IntoParallelIterator
rustc-hash.workspace = true
