[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "sbv-kv"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
auto_impl.workspace = true
hashbrown = { workspace = true, features = [
  "rayon",
] } # reth use rayon::IntoParallelIterator
rustc-hash.workspace = true
